лёгкие пробники php

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
-        <title>
-            <meta name="keywords" content="ключевые слова">
-        </title>
+    <title>
+        Name
+    </title>
     <body>        
         <h1>It works1!</h1>
         <h1>It works!</h1>
